test/trivial/bradc/defaultinit1a.good
Error: Variable 'a' used before it is defined (defaultinit1a.chpl:3)
